Font changes, spacing issues

--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -19,6 +19,12 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: 'PT_Sans';
+  src: url('../fonts/PT_Sans/PT_Sans-Web-Regular.ttf') format('truetype');
+
+}
+
 
 html, body, header, nav, h1, a, ul, li,
 strong, main, section, img, div, h2, p,
@@ -43,6 +49,11 @@ ul {
   list-style: none;
   display: flex;
   flex-flow: row;
+  flex-wrap: wrap;
+  align-items: center;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
@@ -56,7 +67,7 @@ body {
   /*overflow: hidden;*/
   color: black;
   box-sizing: content-box;
-  color: rgba(171, 169, 167, .9);
+  color: rgba(87, 85, 85, 0.9);
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 1), 0px -1px 0px rgba(5, 5, 5, 1);
   z-index: 0;
   position: relative;
@@ -86,6 +97,12 @@ button:hover{
   cursor: pointer;
 }
 
+p {
+  font-family: 'PT_Sans';
+  font-size: 25px;
+  line-height: 36px;
+}
+
 /*clearfix*/
 .group:after {
   clear: both;
@@ -95,59 +112,54 @@ button:hover{
 
 /*Sidebar*/
 #header {
-  display: inline;
   position: fixed;
   float: left;
-  width: 40%;
-  min-width: 400px;
+  width: 30%;
   top: 0;
-  left: 20px;
+
   /*text-align: center;*/
-  color: rgba(171, 169, 167, .9);
+  color: rgba(87, 85, 85, 0.9);
   text-shadow: 0px 1.5px 0px rgba(255, 255, 255, 1), 0px -1.5px 0px rgba(5, 5, 5, 1);
+}
+#header > header {
+  display: flex;
+  flex-flow: column;
+  flex-wrap: nowrap;
+  text-align: center;
 }
 
 h1 {
-  margin: 0 0 0 20px;
+  /*margin: 0 0 0 20px;*/
   font-weight: bold;
-  font-style: italic;
   font-size: 64px;
   text-shadow: 0px 1.5px 0px rgba(255, 255, 255, 1), 0px -1.5px 0px rgba(24, 23, 23, 1);
 }
 
-#header p {
-  margin: 0 120px;
-}
-
-#header > ul {
-  width: 100%;
-  height: auto;
-}
 
 #header li {
   display: inline;
-  margin: 10px;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 10px;
 }
 
-#header footer {
-  margin: 15px 160px;
-}
 
 /*Main*/
 #main {
   display: inline;
-  top: 20px;
-  width: 60%;
-  min-width: 600px;
-  position: absolute;
-  left: 480px;
-  text-transform: lowercase;
+  float: right;
+  width: 70%;
+  padding: 0 50px;
+
+  /*text-transform: lowercase;*/
 
 }
 
-article {
-  padding: 50px 50px 0px 50px;
+#projects article:not(:nth-child(2)) {
+  padding: 50px 0 0 0;
 }
+
 
 h2 {
   font-weight: bold;
@@ -161,8 +173,9 @@ h3 {
   margin: 0 0 300px 0;
 }
 
-#banner > header, #skills h2, #contact h2 {
-  padding: 0 0 20px 0;
+#about h2, #projects h2, #skills h2, #contact h2 {
+  font-size: 64px;
+  padding: 0 0 10px 0;
 }
 
 article > a {
@@ -205,15 +218,14 @@ article > div {
   float: left;
   width: 100%;
   margin: 20px 0;
-  padding: 0;
-  color: rgba(219, 198, 59, 0.9);
+  font-family: 'PT_Sans';
+  color: rgba(142, 125, 17, 0.9);
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 1), 0px -1px 0px rgba(65, 60, 14, 1);
 }
 
 /*Footer*/
 #footer {
-  padding: 0 50px;
-  font-size: 12px;
+  font-size: 20px;
   margin: 50px 0;
 }
 
